--- a/star_wars_survey/star_wars_survey_analysis.ipynb
+++ b/star_wars_survey/star_wars_survey_analysis.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "replace certain survey answers to enable easier data analysis"
+    "replace certain survey answers to enable easier data analysis, similar helper function to before is used for these taks"
    ]
   },
   {
